[package]
name = "dns-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
clap = { version = "4.4.16", features = ["derive"] }
rand = "0.8.5"
serde = {version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = {version = "1.36.0", features = ["full"]}
